@@ -11,6 +11,12 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-09-08
+2014-01-06 Andy Salnikov
+- XtcChunkDgIter::next() - add protection for corrupted headers, checks 
+  extent size of the top-most XTC and raises exception if size is 
+  lower that size of XTC header
+
 Tag: V00-09-07
 2013-11-07 David Schneider
 - add convenience function to DgHeader
